# FastAPI_SQLAlchemy

./: .gitignore  README.MD  README.md  alembic.ini  app.py  asgi.py  docker-compose.yaml  pyproject.toml
components/comment/: models.py  schemas.py  services.py  views.py
components/post/: elastic.py  models.py  schemas.py  services.py  views.py
components/rating/: models.py  schemas.py  services.py  views.py
components/user/: auth.py  models.py  schemas.py  services.py  views.py
config/: app.py  db.py  elastic.py
db/: config.py
migrations/: env.py
migrations/versions/: 4f51ec1f90e6_add_avg_rating.py  bcf1d64f27b2_init.py  dcc251fbb9c8_init.py
